--- a/MyFirstWebsite/MyFirstWebsite/Views/Shared/_Layout.cshtml
+++ b/MyFirstWebsite/MyFirstWebsite/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                             <li>@Html.ActionLink("Home", "Index", "Home")</li>
                             <li>@Html.ActionLink("About", "About", "Home")</li>
                             <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Games", "Index", "Game")</li>
                         </ul>
                     </nav>
                 </div>
@@ -39,6 +40,7 @@
                 @RenderBody()
             </section>
         </div>
+        
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
